--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <body>
         <h1>My first header</h1>
+        <h2> My second header </h2>
         <p> This is a paragraph. </p>
     </body>
 </html>
